crates/oro-shim-bin/tests/snapshots/shim_bin__from.env.args.snap
---
source: crates/node-maintainer/tests/shim_bin.rs
expression: "std::fs::read_to_string(&to).unwrap().replace('\\r', \"\\\\r\")"
---
#!/bin/sh
basedir = $(dirname "$(echo "$0" | sed -e 's,\\,/,g')")

case `uname` in
    *CYGWIN*|*MINGW*|*MSYS*) basedir=`cygpath -w "$basedir"`;;
esac

if [ -x "$basedir/node" ]; then
  exec "$basedir/node"  --expose_gc "$basedir/../from.env.args" "$@"
else 
  exec node  --expose_gc "$basedir/../from.env.args" "$@"
fi

