crates/oro-shim-bin/tests/snapshots/shim_bin__from.env.multiple.variables.ps1.snap
---
source: crates/node-maintainer/tests/shim_bin.rs
expression: "std::fs::read_to_string(to.with_extension(\"ps1\")).unwrap().replace('\\r',\n    \"\\\\r\")"
---
#!/usr/bin/env pwsh
$basedir=Split-Path $MyInvocation.MyCommand.Definition -Parent

$exe=""
if ($PSVersionTable.PSVersion -lt "6.0" -or $IsWindows) {
  # Fix case when both the Windows and Linux builds of Node
  # are installed in the same directory
  $exe=".exe"
}
$env:key="value"
$env:key2="value2"
$ret=0
if (Test-Path "$basedir/node$exe") {
  # Support pipeline input
  if ($MyInvocation.ExpectingInput) {
    $input | & "$basedir/node$exe"  --flag-one --flag-two "$basedir/../from.env.multiple.variables" $args
  } else {
    & "$basedir/node$exe"  --flag-one --flag-two "$basedir/../from.env.multiple.variables" $args
  }
  $ret=$LASTEXITCODE
} else {
  # Support pipeline input
  if ($MyInvocation.ExpectingInput) {
    $input | & "node"$exe  --flag-one --flag-two "$basedir/../from.env.multiple.variables" $args
  } else {
    & "node"$exe  --flag-one --flag-two "$basedir/../from.env.multiple.variables" $args
  }
  $ret=$LASTEXITCODE
}
exit $ret

